fixed home page alignment on small screen size devices

--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -625,3 +625,9 @@ strong{
 .view-container{
     top: 0!important;
 }
+
+@media screen and (max-width : 315px)  {
+    figure img {
+        width: 130px!important;
+    }
+}
